[package]
name = "lance-timing-repro"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
lance = { git = "https://github.com/ankitvij-db/lance", branch = "v3-ivf-pq-indices"}
arrow = "52.2.0"
arrow-schema = "52.2.0"
arrow-array = "52.2.0"
lancedb = "0.10.0"
rand = "0.8"
rand_distr = "0.4"
lance-linalg = { git = "https://github.com/ankitvij-db/lance", branch = "v3-ivf-pq-indices"}
lance-index = { git = "https://github.com/ankitvij-db/lance", branch = "v3-ivf-pq-indices"}
clap = { version = "4.0", features = ["derive"] }
